--- a/sass/main.sass
+++ b/sass/main.sass
@@ -57,10 +57,10 @@ html
       background-color: $active
       width: 40px
 
-
 .products_section
   font-family: "Comfortaa", cursive
-  margin-top: 40px
+  padding-top: 40px
+  padding-bottom: 20px
   background-color: $body-bg
   margin-bottom: 80px
   .product_wrap
@@ -204,8 +204,9 @@ html
 .video_section
   background-color: $body-bg
   font-family: "Comfortaa", cursive
+  padding-bottom: 40px
+  padding-top: 40px
   &_header
-    padding-top: 40px
     margin-bottom: 60px
     h2
       font-size: 38px
